[project]
name = "trainerday-to-garmin"
version = "0.1.0"
description = "Upload the latest TrainerDay .tcx to Garmin Connect as Virtual Cycling."
requires-python = ">=3.12"
dependencies = ["garminconnect>=0.3.5"]

# A single-script app, not an installable package: uv just manages the venv.
[tool.uv]
package = false
